--- a/Копия_блокнота_"1_arithmetics_ipynb".ipynb
+++ b/Копия_блокнота_"1_arithmetics_ipynb".ipynb
@@ -238,7 +238,7 @@
         "\n",
         "result = str1 + num1\n",
         "\n",
-        "print(result) # выдаст ошибку, нельяза сочетать строки и числа"
+        "print(result) # выдаст ошибку, нельзя сочетать строки и числа"
       ],
       "metadata": {
         "id": "IWmTrByfk0Ok",
