--- a/Копия_блокнота_"4_if_ipynb".ipynb
+++ b/Копия_блокнота_"4_if_ipynb".ipynb
@@ -76,22 +76,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XDk2pBii3Nvo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f8162628-99c7-4011-d11f-a9b501286a4e"
+        "id": "XDk2pBii3Nvo"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Введите пароль: 321\n",
-            "Пароль верный!\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "password = 321\n",
         "passw = int(input('Введите пароль: '))\n",
@@ -132,23 +119,10 @@
         "   print('Доступ запрещен')"
       ],
       "metadata": {
-        "id": "aUr56W8b3-gg",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d03eea7e-5e59-4649-9398-a61d2e4a7bb2"
+        "id": "aUr56W8b3-gg"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Введите возраст: 14\n",
-            "Доступ запрещен\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -281,54 +255,58 @@
     {
       "cell_type": "code",
       "source": [
-        "num = input('')\n",
+        "num = input()\n",
         "num1, sign, num2 = num.split(' ')\n",
         "num1, num2 = float(num1), float(num2)\n",
+        "num3 = None\n",
         "if sign == '+':\n",
         "  num3 = num1 + num2\n",
-        "  if isinstance(num3, float) and num3.is_integer():\n",
-        "    print(int(num3))\n",
-        "  else:\n",
-        "    print(num3)\n",
+        "\n",
         "elif sign == '-':\n",
         "  num3 = num1 - num2\n",
-        "  if isinstance(num3, float) and num3.is_integer():\n",
-        "    print(int(num3))\n",
-        "  else:\n",
-        "    print(num3)\n",
+        "\n",
         "elif sign == ':':\n",
         "  num3 = num1 / num2\n",
-        "  if isinstance(num3, float) and num3.is_integer():\n",
-        "    print(int(num3))\n",
-        "  else:\n",
-        "    print(num3)\n",
+        "\n",
         "elif sign == '*':\n",
         "  num3 = num1 * num2\n",
-        "  if isinstance(num3, float) and num3.is_integer():\n",
-        "    print(int(num3))\n",
-        "  else:\n",
-        "    print(num3)\n",
-        "elif sign == '==':\n",
-        "  if num1 == num2:\n",
-        "    print('True')\n",
-        "  else:\n",
-        "    print('False')\n",
+        "\n",
+        "elif sign == '=':\n",
+        "  print(num1 == num2)\n",
+        "  exit()\n",
+        "\n",
         "elif sign == '>':\n",
-        "  if num1 > num2:\n",
-        "    print('True')\n",
-        "  else:\n",
-        "    print('False')\n",
+        "  print(num1 > num2)\n",
+        "  exit()\n",
+        "\n",
         "elif sign == '<':\n",
-        "  if num1 < num2:\n",
-        "    print('True')\n",
-        "  else:\n",
-        "    print('False')"
+        "  print(num1 < num2)\n",
+        "  exit()\n",
+        "\n",
+        "if num3 is not None:\n",
+        "    if isinstance(num3, float) and num3.is_integer():\n",
+        "        print(int(num3))\n",
+        "    else:\n",
+        "        print(num3)"
       ],
       "metadata": {
-        "id": "z5cHM4Og7G9s"
+        "id": "z5cHM4Og7G9s",
+        "outputId": "4c9fcb49-db90-4dcf-b6dd-18b258206883",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4 = 9\n",
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -375,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "i5vvEmhZ9Isv",
         "colab": {
@@ -459,7 +437,7 @@
         },
         "outputId": "a5c50aeb-9841-4668-da93-586bfe3d74e1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +505,7 @@
         },
         "outputId": "f5e224e3-2938-41fd-8cd2-547c66b392ee"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +550,7 @@
         },
         "outputId": "29856904-e735-4f53-a981-166d8f6965f9"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +619,7 @@
         },
         "outputId": "1fcd6312-e4ab-4d55-c694-bf431d62e8c3"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +703,7 @@
         },
         "outputId": "e400d218-93c7-4c93-b632-87d9da807310"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
